<resources>
    <string name="app_name">Instagram</string>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>
    <string name="botao_texto_logar">Logar</string>
    <string name="texto_crie_uma_conta">Não tem uma conta? Crie uma!</string>
    <string name="texto_digite_seu_usuario">Digite seu Usuário</string>
    <string name="texto_digite_seu_e_mail">Digite seu E-mail</string>
    <string name="texto_digite_sua_senha">Digite sua Senha</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="texto_ja_tem_conta">Já tem conta?faça seu Login</string>
    <string name="action_configuracoes">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="action_compartilhar">Compartilhar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed_usuarios">FeedUsuariosActivity</string>
</resources>
